@@ -1,5 +1,6 @@
 git-core (1:1.6.6.1-1) unstable; urgency=low
 
+  [ Gerrit Pape ]
   * new upstream point release.
     * Document git-blame triple -C option (thx Ramkumar Ramachandra,
       closes: #476604).
@@ -7,7 +8,11 @@ git-core (1:1.6.6.1-1) unstable; urgency=low
     new; git-cvsserver: allow regex metacharacters in CVSROOT (fixes
     build/selftest failure if the build directory pathname contains a +).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 27 Jan 2010 08:53:45 +0000
+  [ Jonathan Nieder ]
+  * debian/rules: ignore test suite failures on ia64 (workaround:
+    #563882).
+
+ -- Gerrit Pape <pape@smarden.org>  Wed, 27 Jan 2010 09:25:50 +0000
 
 git-core (1:1.6.6-1) unstable; urgency=low
 
